--- a/Intro.html
+++ b/Intro.html
@@ -27,6 +27,7 @@
         <p>
             dip da dee da dee da doh doh dee da dee dee doh
         </p>
+        <img src="x.gif" alt="cooles gif x dreht hihi">
     </main>
 
 
