Added table for equations

--- a/Equations.html
+++ b/Equations.html
@@ -24,11 +24,42 @@
     </nav>
     <main>
         <h1>Formelsammlung</h1>
-        <p>
-            
-        </p>
+        <h4>2D</h4>
+        <table border="1px">
+            <tr>
+                <td>Rechteck</td>
+                <td>A =  a * a</td>
+            </tr>
+            <tr>
+                <td>Quadrat</td>
+                <td>A = a * b</td>
+            </tr>
+            <tr>
+                <td>Dreieck</td>
+                <td>A = 1/3 * a<sup>2</sup></td>
+            </tr>
+            <tr>
+                <td>Viereck</td>
+                <td>A = quatsch</td>
+            </tr>
+        </table>
+
+        <h4>3D</h4>
+        <table border="1px">
+            <tr>
+                <td>Würfel</td>
+                <td>V =  a * a * a</td>
+            </tr>
+            <tr>
+                <td>Quader</td>
+                <td>V = a * b * c</td>
+            </tr>
+            <tr>
+                <td>Kugel</td>
+                <td>V = 4/3 * r<sup>3</sup> * pi</td>
+            </tr>
+        </table>
+
     </main>
-
-
 </body>
 </html>
