--- a/Calculator.html
+++ b/Calculator.html
@@ -17,7 +17,7 @@
                     <a href="Equations.html">Formelsammlung</a>
                 </td>
                 <td>
-                    <a href="Calculator.html">Rechner</a>
+                    <p>Rechner</p>
                 </td>
             </tr>
         </table>
