--- a/Equations.html
+++ b/Equations.html
@@ -14,7 +14,7 @@
                     <a href="Intro.html">Intro</a>
                 </td>
                 <td>
-                    <a href="Equations.html">Formelsammlung</a>
+                    <p>Formelsammlung</p>
                 </td>
                 <td>
                     <a href="Calculator.html">Rechner</a>
