--- a/Intro.html
+++ b/Intro.html
@@ -11,7 +11,7 @@
         <table>
             <tr>
                 <td>
-                    <a href="Intro.html">Intro</a>
+                    <p>Intro</p>
                 </td>
                 <td>
                     <a href="Equations.html">Formelsammlung</a>
