--- a/Equations.html
+++ b/Equations.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head lang="de">
+<html lang="de">
+    <head>
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
     </head>
@@ -14,7 +14,7 @@
                     <a href="Intro.html">Intro</a>
                 </td>
                 <td>
-                    <a href="Equations.html">Formelsammlung</a>
+                    <p>Formelsammlung</p>
                 </td>
                 <td>
                     <a href="Calculator.html">Rechner</a>
@@ -36,7 +36,14 @@
             </tr>
             <tr>
                 <td>Dreieck</td>
-                <td>A = 1/3 * a<sup>2</sup></td>
+                <td>A = 
+                    <math>
+                        <mfrac>
+                            <mi>1</mi>
+                            <mi>3</mi>
+                        </mfrac>
+                    </math>
+                    * a<sup>2</sup></td>
             </tr>
             <tr>
                 <td>Viereck</td>
@@ -55,10 +62,29 @@
                 <td>V = a * b * c</td>
             </tr>
             <tr>
+                <td>Pyramide</td>
+                <td>V = <math>
+                    <mfrac>
+                        <mi>1</mi>
+                        <mi>3</mi>
+                    </mfrac>
+                </math>
+                 * A<sub>Grundfläche</sub> * h</td>
+            </tr>
+            <tr>
                 <td>Kugel</td>
-                <td>V = 4/3 * r<sup>3</sup> * pi</td>
+                <td>V = 
+                    <math>
+                        <mfrac>
+                            <mi>1</mi>
+                            <mi>3</mi>
+                        </mfrac>
+                    </math>
+                    * r<sup>3</sup> * pi</td>
             </tr>
         </table>
+
+        
 
     </main>
 </body>
