first style changes

--- a/Equations.html
+++ b/Equations.html
@@ -3,6 +3,7 @@
     <head>
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="general_style.css">
     </head>
     
 <body>
