--- a/Calculator.html
+++ b/Calculator.html
@@ -3,6 +3,7 @@
     <head lang="de">
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="general_style.css">
     </head>
     
 <body>
@@ -17,7 +18,7 @@
                     <a href="Equations.html">Formelsammlung</a>
                 </td>
                 <td>
-                    <a href="Calculator.html">Rechner</a>
+                    <p>Rechner</p>
                 </td>
             </tr>
         </table>
