--- a/Intro.html
+++ b/Intro.html
@@ -3,6 +3,7 @@
     <head lang="de">
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="general_style.css">
     </head>
     
 <body>
@@ -11,7 +12,7 @@
         <table>
             <tr>
                 <td>
-                    <a href="Intro.html">Intro</a>
+                    <p>Intro</p>
                 </td>
                 <td>
                     <a href="Equations.html">Formelsammlung</a>
