--- a/Equations.html
+++ b/Equations.html
@@ -26,7 +26,7 @@
     <main>
         <h1>Formelsammlung</h1>
         <h4>2D</h4>
-        <table border="1px">
+        <table>
             <tr>
                 <td>Rechteck</td>
                 <td>A =  a * a</td>
@@ -53,7 +53,7 @@
         </table>
 
         <h4>3D</h4>
-        <table border="1px">
+        <table>
             <tr>
                 <td>Würfel</td>
                 <td>V =  a * a * a</td>
