Better styling and footer stuff

--- a/Equations.html
+++ b/Equations.html
@@ -87,5 +87,8 @@
         
 
     </main>
+    <footer>
+        <p><a href="https://www.formelsammlung-mathe.de/">Formeln</a></p>
+    </footer>
 </body>
 </html>
