--- a/Intro.html
+++ b/Intro.html
@@ -15,7 +15,7 @@
         <table>
             <tr>
                 <td>
-                    <p>Intro</p>
+                    <a href="Intro.html">Intro</a>
                 </td>
                 <td>
                     <a href="Equations.html">Formelsammlung</a>
