header and nav improvements

--- a/Intro.html
+++ b/Intro.html
@@ -10,21 +10,18 @@
     <header>
         <h1>GeoCalculator</h1>
     </header>
-
-    <nav>
-        <table>
-            <tr>
-                <td>
-                    <a href="Intro.html">Intro</a>
-                </td>
-                <td>
-                    <a href="Equations.html">Formelsammlung</a>
-                </td>
-                <td>
-                    <a href="Calculator.html">Rechner</a>
-                </td>
-            </tr>
-        </table>
+    <nav class="navBar">
+        <ul>
+            <li>
+                <a href="Intro.html">Intro</a>
+            </li>
+            <li>
+                <a href="Equations.html">Formelsammlung</a>
+            </li>
+            <li>
+            <a href="Calculator.html">Rechner</a>
+            </li>
+        </ul>
     </nav>
     <main>
         <h1>Intro</h1>
