--- a/Calculator.html
+++ b/Calculator.html
@@ -7,20 +7,21 @@
     </head>
     
 <body>
+    <header>
+        <h1>GeoCalculator</h1>
+    </header>
     <nav>
-        <table>
-            <tr>
-                <td>
-                    <a href="Intro.html">Intro</a>
-                </td>
-                <td>
-                    <a href="Equations.html">Formelsammlung</a>
-                </td>
-                <td>
-                    <a href="Calculator.html">Rechner</a>
-                </td>
-            </tr>
-        </table>
+        <ul>
+            <li>
+                <a href="Intro.html">Intro</a>
+            </li>
+            <li>
+                <a href="Equations.html">Formelsammlung</a>
+            </li>
+            <li>
+            <a href="Calculator.html">Rechner</a>
+            </li>
+        </ul>
     </nav>
     <main>
         <h1>Rechner</h1>
