--- a/Intro.html
+++ b/Intro.html
@@ -23,22 +23,19 @@
             </li>
         </ul>
     </nav>
-    <main>
+    <main id="intro_main">
         <h1>Intro</h1>
         <p>
             <abbr title="https://www.youtube.com/watch?v=LBjUh4bYF8w&t">dip</abbr> da dee da dee da doh doh dee da dee dee doh
         </p>
         <img src="x.gif" alt="cooles gif x dreht hihi">
-    </main>
 
-    <audio src="Dip Da Dee Da Dee Da Doh Doh.mp3"
+        <audio src="Dip Da Dee Da Dee Da Doh Doh.mp3"
     autoplay controls
     src="/local/Europahymne.mp3" 
     type="audio/mp3">
     </audio>
-
-
-    
+    </main>
 
 <footer>
     <hr>
