--- a/Equations.html
+++ b/Equations.html
@@ -10,7 +10,7 @@
     <header>
         <h1>GeoCalculator</h1>
     </header>
-    <nav>
+    <nav class="navBar">
         <ul>
             <li>
                 <a href="Intro.html">Intro</a>
