Added Images and cool

--- a/GridLayoutTest.html
+++ b/GridLayoutTest.html
@@ -7,7 +7,7 @@
     </head>
 
 <body>
-<div class="container">
+<div class="gridExample">
     <div class="FirstName">FirstName</div>
     <div class="LastName">LastName</div>
     <div class="Adress">Adress</div>
