javascript we are fuckin ballin dawg

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li>
             <a href="Calculator.html">Rechner</a>
             </li>
+            <li>
+                <a href="GridLayoutTest.html">Grid</a>
+            </li>
         </ul>
     </nav>
     <div class="mainGrid">
