--- a/GridLayoutTest.html
+++ b/GridLayoutTest.html
@@ -7,6 +7,28 @@
     </head>
 
 <body>
+    <header>
+        <h1>GeoCalculator</h1>
+    </header>
+    <nav class="navBar">
+        <ul>
+            <li>
+                <a href="Index.html">Intro</a>
+            </li>
+            <li>
+                <a href="Equations.html">Formelsammlung</a>
+            </li>
+            <li>
+            <a href="Calculator.html">Rechner</a>
+            </li>
+            <li>
+                <a href="GridLayoutTest.html">Grid</a>
+            </li>
+        </ul>
+    </nav>
+
+    <h2>Grid Example</h2>
+
 <div class="gridExample">
     <div class="FirstName">FirstName</div>
     <div class="LastName">LastName</div>
@@ -15,7 +37,7 @@
     <div class="Box2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</div>
     <div class="Box3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</div>
     <div class="Department">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</div>
-    <div class="BottomStuff">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</div>
+    <div class="BottomStuff">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</div>
 </div>
 </body>
 
