working calculator and style updates

--- a/Calculator.html
+++ b/Calculator.html
@@ -35,7 +35,7 @@
         <button type="button" onclick="calculate()">Calculate!</button>
         <p id="resultText"></p> -->
 
-        <div id="select-container">
+        <div id="calculator-container">
             <div id="select-container">
                 <label for="element-select">Wähle die zu berechnende Form:</label>
                 <select id="element-select" name="element-select" onchange="showInputs()">
@@ -59,6 +59,7 @@
             </div>
         </div>
         <div id="result-container">
+            <button type="button" onclick="calculate()">Calculate!</button>
             <p id="resultText"></p>
         </div>
     </main>
