--- a/Equations.html
+++ b/Equations.html
@@ -9,7 +9,7 @@
     
 <body>
     <header>
-        <h1>GeoCalculator</h1>
+        <h1><a href="index.html">GeoCalculator</a></h1>
     </header>
     <nav class="navBar">
         <ul>
