--- a/Calculator.html
+++ b/Calculator.html
@@ -55,7 +55,8 @@
                 </select>
             </div>
             <div id="input-container">
-    
+                <label for="square-side">Seitenlänge:</label>
+                <input type="number" id="square-side" name="square-side">
             </div>
         </div>
         <div id="result-container">
