updated @media tags

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <h1>Intro</h1>
         <p id="CoolHover">
-            <abbr title="https://www.youtube.com/watch?v=LBjUh4bYF8w&t">dip</abbr> da dee da dee da doh doh dee da dee dee doh
+            <abbr title="https://www.youtube.com/watch?v=LBjUh4bYF8w&t">dip</abbr> da dee da dee da doh <abbr title="bowomph">doh</abbr> dee da dee dee doh
         </p>
         <img src="src\x.gif" alt="cooles gif x dreht hihi">
         <audio src="src\Dip Da Dee Da Dee Da Doh Doh.mp3"
