--- a/Equations.html
+++ b/Equations.html
@@ -69,6 +69,7 @@
                 </ul>
             </ul>
 
+        <!--ELEGANCE-Pattern Layout: Layouted with structured Grid-->
         <h2>2D</h2>
 
         <div id="_2dGrid">  
