--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head lang="de">
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
-        <!--Cursor geklaut von hier: https://akatsuki.nekoweb.org/-->
         <link rel="stylesheet" href="general_style.css">
+        <!--ELEGANCE-Pattern Novelty: cool cursor effect on intro page-->
         <script src="cursoreffect.js"></script>
     </head>
     
@@ -31,6 +31,10 @@
     <div class="mainGrid">
     <main>
         <h1>Intro</h1>
+        <!--ELEGANCE-Pattern Empathy: Friendly greeting-->
+        <p>Hallo Lieber User! Willkommen beim <abbr>GeoCalculator</abbr>!</p>
+        <p>Auf dieser Seite findest du verschiedene Formeln zur berechnung geometrischer Formen.</p>
+        <p>Außerdem gibt es einen Rechner du nur die Werte deiner Formen eintragen musst.</p>
         <p id="CoolHover">
             <abbr title="https://www.youtube.com/watch?v=LBjUh4bYF8w&t">dip</abbr> da dee da dee da doh <abbr title="bowomph">doh</abbr> dee da dee dee doh
         </p>
