--- a/Calculator.html
+++ b/Calculator.html
@@ -31,38 +31,35 @@
 <div class="mainGrid">
     <main>
         <h1>Rechner</h1>
-        <!-- <input id="n" type="text"></input>
-        <button type="button" onclick="calculate()">Calculate!</button>
-        <p id="resultText"></p> -->
-
         <div id="calculator-container">
             <div id="select-container">
                 <label for="element-select">Wähle die zu berechnende Form:</label>
                 <select id="element-select" name="element-select" onchange="showInputs()">
                     <optgroup label="2D Elemente">
-                        <option value="quadrat">Quadrat</option>
-                        <option value="rechteck">Rechteck</option>
-                        <option value="dreieck">Dreieck</option>
-                        <option value="kreis">Kreis</option>
-                        <option value="viereck">Viereck</option>
+                        <option value="square">Quadrat</option>
+                        <option value="rectangle">Rechteck</option>
+                        <option value="triangle">Dreieck</option>
+                        <option value="circle">Kreis</option>
+                        <option value="trapezoid">Trapez</option>
                     </optgroup>
                     <optgroup label="3D Elemente">
-                        <option value="würfel">Würfel</option>
-                        <option value="quader">Quader</option>
-                        <option value="pyramide">Pyramide</option>
-                        <option value="kugel">Kugel</option>
+                        <option value="cube">Würfel</option>
+                        <option value="cuboid">Quader</option>
+                        <option value="pyramid3">Pyramide (3)</option>
+                        <option value="pyramid4">Pyramide (4)</option>
+                        <option value="sphere">Kugel</option>
                     </optgroup>
                 </select>
             </div>
             <div id="input-container">
-                <label for="square-side">Seitenlänge:</label>
-                <input type="number" id="square-side" name="square-side">
+                <!--Hier sollen Felder für die Eingaben der Jeweiligen Form erscheinen-->
             </div>
-        </div>
-        <div id="result-container">
-            <button type="button" onclick="calculate()">Calculate!</button>
-            <p id="resultText"></p>
-        </div>
+            <div id="operation-container">
+                <!--Hier soll ein Button für die Berechnung von input nach result und ein Button für die berechnung in die andere richtung entstehen-->
+            </div>
+            <div id="result-container">
+                <!--Hier soll ein Feld für das Ergebnis des jeweiligen Flächeninhalts entstehen-->
+            </div>
     </main>
 </div>
     <hr>
