--- a/Calculator.html
+++ b/Calculator.html
@@ -51,16 +51,10 @@
                     </optgroup>
                 </select>
             </div>
-            <div id="input-container">
-                <!--Hier sollen Felder für die Eingaben der Jeweiligen Form erscheinen-->
-            </div>
-            <div id="operation-container">
-                <!--Hier soll ein Button für die Berechnung von input nach result und ein Button für die berechnung in die andere richtung entstehen-->
-            </div>
-            <div id="result-container">
-                <!--Hier soll ein Feld für das Ergebnis des jeweiligen Flächeninhalts entstehen-->
-            </div>
-    </main>
+            <div id="input-container"><div class="input-group"><label for="side">Seitenlänge</label><input type="number" id="side" name="side"></div></div>
+            <div id="operation-container"><button>Vorwärts berechnen</button><button>Rückwärts berechnen</button></div>
+            <div id="result-container"><div class="input-group"><label for="result">Ergebnis</label><input type="number" id="result" name="result"></div></div>
+    </div>
 </div>
     <hr>
     <footer>
