fertig bis auf comments

--- a/Equations.html
+++ b/Equations.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="general_style.css">
         <script src="selector.js"></script>
+        <script src="onKeyDown.js"></script>
     </head>
     
 <body>
