--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
     </nav>
     <div class="mainGrid">
     <main>
-        <h1>Intro</h1>
         <!--ELEGANCE-Pattern Empathy: Friendly greeting-->
-        <p>Hallo Lieber User! Willkommen beim <abbr>GeoCalculator</abbr>!</p>
-        <p>Auf dieser Seite findest du verschiedene Formeln zur berechnung geometrischer Formen.</p>
-        <p>Außerdem gibt es einen Rechner du nur die Werte deiner Formen eintragen musst.</p>
-        <p id="CoolHover">
-            <abbr title="https://www.youtube.com/watch?v=LBjUh4bYF8w&t">dip</abbr> da dee da dee da doh <abbr title="bowomph">doh</abbr> dee da dee dee doh
-        </p>
-        <img src="src\x.gif" alt="cooles gif x dreht hihi">
-        <audio src="src\Dip Da Dee Da Dee Da Doh Doh.mp3"
-    preload="auto"
-    controls
-    type="audio/mp3">
-    </audio>
+        <div id="intro">
+            <h1>Intro</h1>
+            <p>Hallo Lieber User! Willkommen beim <abbr title="GeoCalculator ist der Titel dieser DHBW Projektarbeit">GeoCalculator</abbr>!</p>
+            <p>Auf dieser Seite findest du verschiedene Formeln zur berechnung geometrischer Formen.</p>
+            <p>Außerdem gibt es einen Rechner in den du die Formen berechnen kannst.</p>
+            <img src="src\x.gif" alt="cooles gif x dreht hihi">
+            <audio src="src\Dip Da Dee Da Dee Da Doh Doh.mp3"
+            preload="auto"
+            controls
+            type="audio/mp3">
+            </audio>
+        </div>
     </main>
 </div>
 
