--- a/Calculator.html
+++ b/Calculator.html
@@ -51,8 +51,16 @@
                     </optgroup>
                 </select>
             </div>
-            <div id="input-container"><div class="input-group"><label for="side">Seitenlänge</label><input type="number" id="side" name="side"></div></div>
-            <div id="operation-container"><button>Vorwärts berechnen</button><button>Rückwärts berechnen</button></div>
+            <div id="input-container">
+                <div class="input-group">
+                    <label for="side">Seitenlänge</label>
+                    <input type="number" id="side" name="side">
+                </div>
+            </div>
+            <div id="operation-container">
+                <button type="button" onclick="calculate()">Vorwärts berechnen</button>
+                <button type="button" onclick="reverseCalculate()">Rückwärts berechnen</button>
+            </div>
             <div id="result-container"><div class="input-group"><label for="result">Ergebnis</label><input type="number" id="result" name="result"></div></div>
     </div>
 </div>
