Circle button and so on

--- a/Equations.html
+++ b/Equations.html
@@ -51,6 +51,9 @@
                     <div>
                         <button type="button" onclick="markTrapezoid()">Trapez</button>
                     </div>
+                    <div>
+                        <button type="button" onclick="markCircle()">Kreis</button>
+                    </div>
                 </div>
 
                 <div>
