--- a/Equations.html
+++ b/Equations.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="mainGrid">
-        <main>
+    <main>
             <h1>Formelsammlung</h1>
 
             <button type="button" onclick="clearMarkings()">clear</button>
@@ -95,7 +95,7 @@
                 </mrow>
             </math>
             </div>
-            <div class="eq_Image square"><img src="src\Square.png" alt="square" height="100em"></div>
+            <div class="eq_Image square"><img src="src/Square.png" alt="square" height="100e"></div>
 
             <div class="eq_Title rectangle">Rechteck</div>
             <div class="eq_Equation rectangle">
@@ -109,7 +109,7 @@
                     </mrow>
                 </math>
             </div>
-            <div class="eq_Image rectangle"><img src="src\Rectan.png" alt="rectangle" height="100em"></div>
+            <div class="eq_Image rectangle"><img src="src/Rectan.png" alt="rectangle" height="100e"></div>
     
             <div class="eq_Title triangle">Dreieck</div>
             <div class="eq_Equation triangle">
@@ -129,7 +129,7 @@
                 </mrow>
                 </math>
             </div>
-            <div class="eq_Image triangle"><img src="src\Triangle.png" alt="triangle" height="100em"></div>
+            <div class="eq_Image triangle"><img src="src/Triangle.png" alt="triangle" height="100e"></div>
 
             <div class="eq_Title trapezoid">Trapez</div>
             <div class="eq_Equation trapezoid">
@@ -152,7 +152,7 @@
                     </mrow>
                 </math>
             </div>
-            <div class="eq_Image trapezoid"><img src="src\Trapezoid.png" alt="Trapez" height="100em"></div>
+            <div class="eq_Image trapezoid"><img src="src/Trapezoid.png" alt="Trapez" height="100e"></div>
 
             <div class="eq_Title circle">Kreis</div>
             <div class="eq_Equation circle">
@@ -169,7 +169,7 @@
                 </mrow>
             </math>
             </div>
-            <div class="eq_Image circle"><img src="src\Circle.png" alt="circle" height="100em"></div>
+            <div class="eq_Image circle"><img src="src/Circle.png" alt="circle" height="100e"></div>
         </div>        
 
             <h2>3D</h2>
@@ -188,7 +188,7 @@
                     </mrow>
                 </math>
             </div>
-            <div class="eq_Image cube"><img src="src\Cube.png" alt="cube" height="100em"></div>
+            <div class="eq_Image cube"><img src="src/Cube.png" alt="cube" height="100e"></div>
         
             <div class="eq_Title cuboid">Quader</div>
             <div class="eq_Equation cuboid">
@@ -204,7 +204,7 @@
                     </mrow>
                 </math>
             </div>
-            <div class="eq_Image cuboid"><img src="src\Cuboid.png" alt="cuboid" height="100em"></div>
+            <div class="eq_Image cuboid"><img src="src/Cuboid.png" alt="cuboid" height="100e"></div>
 
             <div class="eq_Title pyramid3">Pyramide (3)</div>
                 <div class="eq_Equation pyramid3">
@@ -223,7 +223,7 @@
                         </mrow>
                     </math>
                 </div>
-                <div class="eq_Image pyramid3"><img src="src/Pyramid3.png" alt="pyramid with 3 sided base" height="100em"></div>
+                <div class="eq_Image pyramid3"><img src="src/Pyramid3.png" alt="pyramid with 3 sided base" height="100e"></div>
 
                 <div class="eq_Title pyramid4">Pyramide (4)</div>
                 <div class="eq_Equation pyramid4">
@@ -242,7 +242,7 @@
                         </mrow>
                     </math>
                 </div>
-                <div class="eq_Image pyramid4"><img src="src/Pyramid4.png" alt="pyramid with 4 sided base" height="100em"></div>
+                <div class="eq_Image pyramid4"><img src="src/Pyramid4.png" alt="pyramid with 4 sided base" height="100e"></div>
 
                 <div class="eq_Title sphere">Kugel</div>
                 <div class="eq_Equation sphere">
@@ -264,8 +264,10 @@
                         </mrow>
                     </math>
                 </div>
-                <div class="eq_Image sphere"><img src="src/Sphere.png" alt="Kugel" height="100em"></div>
+                <div class="eq_Image sphere"><img src="src/Sphere.png" alt="Kugel" height="100e"></div>
         </div>
+    </main>
+    </div>
     <hr>
     <footer>
         <p><a href="https://www.formelsammlung-mathe.de/">Formeln</a></p>
