--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head lang="de">
+<html lang="de">
+    <head>
         <title>GeoCalculator</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="general_style.css">
@@ -36,11 +36,10 @@
             <p>Hallo Lieber User! Willkommen beim <abbr title="GeoCalculator ist der Titel dieser DHBW Projektarbeit">GeoCalculator</abbr>!</p>
             <p>Auf dieser Seite findest du verschiedene Formeln zur berechnung geometrischer Formen.</p>
             <p>Außerdem gibt es einen Rechner in den du die Formen berechnen kannst.</p>
-            <img src="src\x.gif" alt="cooles gif x dreht hihi">
-            <audio src="src\Dip Da Dee Da Dee Da Doh Doh.mp3"
-            preload="auto"
-            controls
-            type="audio/mp3">
+            <img src="src/x.gif" alt="cooles gif x dreht hihi">
+            <audio src="src/Dip Da Dee Da Dee Da Doh Doh.mp3"
+            autoplay
+            controls>
             </audio>
         </div>
     </main>
